--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:crud-of-heroes
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
